--- a/style.css
+++ b/style.css
@@ -25,14 +25,28 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column; 
   transition: opacity 1s ease;
   z-index: 9999;
 }
+
 
 .intro-logo {
   width: 180px;
   animation: flyIn 2.5s ease-out forwards;
 }
+
+
+
+.teacher-name {
+  margin-top: 15px; 
+  width: auto;
+  animation: flyIn 2.5s ease-out forwards;
+  color: #0410bb;
+}
+
+
+
 
 @keyframes flyIn {
   0% {
