--- a/style.css
+++ b/style.css
@@ -386,7 +386,12 @@ img{
 
 
 .footer p span {
-    color: #053bd1fd ;
+    color: #053bd1fd ; 
+}
+
+
+.footer a{
+    color: #ffffff;
 }
 
 
@@ -469,6 +474,6 @@ video{
     margin-left: auto;
     margin-right: auto;
     max-width: 50%;
-    
+
 }
 
